# ChromaForge-v2

./: .gitignore  CMakeLists.txt  README.md
Header Files/: Block.h  BlockMesh.h  Camera.h  CubeMesh.h  CubeParams.h  CubeTexture.h  EBO.h  Mesh.h  OldBlock.h  Skybox.h  SkyboxMesh.h  SkyboxParams.h  Texture.h  VAO.h  VBO.h  shaderClass.h
Header Files/Chunk/: Chunk.h  ChunkMesh.h  ChunkParams.h
Header Files/Skybox/: Moon.h  Skybox.h  SkyboxMesh.h  SkyboxParams.h  Sun.h
Resource Files/: blocks.json  main.vert
Resource Files/Shaders/: cube.vert  default.frag  default.vert  skybox.frag
Source Files/: Block.cpp  Camera.cpp  CubeMesh.cpp  CubeTexture.cpp  EBO.cpp  Mesh.cpp  Texture.cpp  VAO.cpp  VBO.cpp  glad.c  main.cpp  shaderClass.cpp
dev/tests/: base_entities.lua  bytearray.lua  chunks.lua  data_buffer.lua  example.lua  filesystem.lua  network_http.lua  network_tcp.lua  network_udp.lua  perftest.lua  world.lua
doc/ru/: 3d-text.md  assets-preload.md  audio.md  block-models.md  block-properties.md  cfmodel.md  console.md  content-packs.md  engine-use-recommendations.md  entity-properties.md  item-properties.md  main-page.md  particles.md  resources.md  rigging.md  scripting.md  text-styles.md  world-generator.md  xml-ui-layouts.md
include/glad/: glad.h
res/: preload.json  project.toml
res/config/: bindings.toml  defaults.toml
res/generators/: default.lua
res/layouts/: code_editor.xml  code_editor.xml.lua  console.xml  console.xml.lua  files_panel.xml  files_panel.xml.lua  ingame_chat.xml  ingame_chat.xml.lua  inventory.xml  inventory.xml.lua
res/models/: stairs.cfmodel  stairs.xml
res/modules/: bit_converter.lua  data_buffer.lua  gui_util.lua  io_stream.lua  item_models.lua  schedule.lua  test_util.lua  tests_util.lua
res/scripts/: classes.lua  hud.lua  post_content.lua  stdcmd.lua  stdlib.lua  stdmin.lua  world.lua
res/shaders/: background.frag  background.vert  crosshair.frag  crosshair.vert  default.frag  default.vert  effect.frag  effect.vert  entity.frag  entity.vert  lines.frag  lines.vert  screen.frag  screen.vert  shadows.frag  skybox_gen.frag  skybox_gen.vert  translucent.frag
res/texts/: be_BY.txt  de_DE.txt  en_US.txt  fi_FI.txt  langs.json  pl_PL.txt  ru_RU.txt  uk_UA.txt
src/: Assets.cpp  Assets.h  AssetsLoader.cpp  AssetsLoader.h  Block.cpp  BlockMesh.cpp  Camera.cpp  CubeParams.cpp  EngineTime.h  Mainloop.cpp  Mesh.cpp  OldBlock.cpp  ServerMainloop.cpp  Skybox.cpp  SkyboxMesh.cpp  SkyboxParams.cpp  TestMainloop.cpp  Texture.cpp  VAO.cpp  constants.h  core_content_defs.h  core_defs.cpp  core_defs.h  declarations.cpp  declarations.h  definitions.cpp  definitions.h  delegates.h  engine.cpp  engine.h  hud_render.cpp  hud_render.h  input_bindings.h  main.cpp  player_control.cpp  player_control.h  settings.cpp  settings.h  shaderClass.cpp  typedefs.h  (+2 more)
src/Chunk/: Chunk.cpp  ChunkMesh.cpp  ChunkParams.cpp
src/Skybox/: Moon.cpp  Skybox.cpp  SkyboxMesh.cpp  SkyboxParams.cpp  Sun.cpp
src/assets/: Assets.cpp  Assets.h  AssetsLoader.cpp  AssetsLoader.h  asset_loaders.cpp  asset_loaders.h  assets_util.cpp  assets_util.h
src/audio/: NoAudio.cpp  NoAudio.h  audio.cpp  audio.h
src/coders/: BasicParser.h  BasicParser.inl  GLSLExtension.cpp  GLSLExtension.h  binary_json.cpp  binary_json.h  binary_json_dv.cpp  byte_utils.cpp  byte_utils.h  cfmodel.cpp  cfmodel.h  commons.cpp  commons.h  compression.cpp  compression.h  imageio.cpp  imageio.h  json.cpp  json.h  lua_parsing.cpp  lua_parsing.h  obj.cpp  obj.h  ogg.cpp  ogg.h  png.cpp  png.h  rle.cpp  rle.h  syntax_parser.cpp  syntax_parser.h  toml.cpp  toml.h  vec3.cpp  vec3.h  wav.cpp  wav.h  xml.cpp  xml.h  yaml.cpp  (+3 more)
src/content/: Content.cpp  Content.h  ContentBuilder.cpp  ContentBuilder.h  ContentControl.cpp  ContentControl.h  ContentLUT.cpp  ContentLUT.h  ContentLoader.cpp  ContentLoader.h  ContentPack.cpp  ContentPack.h  ContentPackVersion.cpp  ContentPackVersion.h  ContentReport.cpp  ContentReport.h  PacksManager.cpp  PacksManager.h  content_fwd.h
src/data/: StructLayout.cpp  StructLayout.h  StructMapper.h  dv.cpp  dv.h  dv_util.h  dynamic.cpp  dynamic.h  dynamic_fwd.h  dynamic_util.h  setting.cpp  setting.h
src/debug/: Logger.cpp  Logger.h
src/devtools/: DebuggingServer.cpp  DebuggingServer.h  Editor.cpp  Project.cpp  Project.h  SyntaxProcessor.cpp  SyntaxProcessor.h  actions.h  syntax.h  syntax_highlighting.cpp  syntax_highlighting.h
src/engine/: Engine.cpp  Engine.h  Mainloop.cpp  PostRunnables.h  ServerMainloop.cpp
src/files/: RegionsLayer.cpp  WorldConverter.cpp  WorldConverter.h  WorldFiles.cpp  WorldFiles.h  WorldRegions.cpp  WorldRegions.h  binary_io.cpp  binary_io.h  compatibility.cpp  compatibility.h  engine_files.cpp  engine_files.h  engine_paths.cpp  engine_paths.h  files.cpp  files.h  rle.cpp  rle.h  settings_io.cpp  settings_io.h  world_regions_fwd.h
src/frontend/: BlocksPreview.cpp  BlocksPreview.h  ContentGfxCache.cpp  ContentGfxCache.h  InventoryView.cpp  InventoryView.h  LevelFrontend.cpp  LevelFrontend.h  Panorama.cpp  Panorama.h  UIDocument.cpp  UIDocument.h  WorldRenderer.cpp  WorldRenderer.h  debug_panel.cpp  hud.cpp  hud.h  hud_render.cpp  hud_render.h  locale.cpp  locale.h  menu.cpp  menu.h  screens.cpp  screens.h  world_render.cpp  world_render.h
src/graphics/: Atlas.cpp  Atlas.h  Batch2D.cpp  Batch2D.h  Batch3D.cpp  Batch3D.h  BlocksRenderer.cpp  BlocksRenderer.h  ChunksRenderer.cpp  ChunksRenderer.h  Cubemap.cpp  Cubemap.h  Font.cpp  Font.h  Framebuffer.cpp  Framebuffer.h  GfxContext.cpp  GfxContext.h  ImageData.cpp  ImageData.h  LineBatch.cpp  LineBatch.h  Mesh.cpp  Mesh.h  PostProcessing.cpp  PostProcessing.h  ShaderProgram.cpp  ShaderProgram.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  TextureAnimation.cpp  TextureAnimation.h  (+5 more)
vctest/: CMakeLists.txt  main.cpp
(+766 files in other folders)
